# glagolica

./: Cargo.toml  Justfile  README.md
glag/: Cargo.toml
glag/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
